modified the login message for correctness

--- a/ui/app/home/views/login.html
+++ b/ui/app/home/views/login.html
@@ -122,8 +122,12 @@
         </div>
     </form>
 </div>
-
 <div class="power-by">
-    <img src="./../images/bahmniLogoFull.png" alt="Bahmni" />
-    <a href={{helpLink}}> eHospital Help</a>
+    <label for="password">
+        Powered By </span>
+    </label>
+    <a href={{helpLink}}>
+     <img alt="eHopital" src="./../images/eHospitalLogo.png" >
+        </a>
+    <a href=#> <u>Help Desk</u></a>
 </div>
