--- a/ui/app/registration/views/newpatient.html
+++ b/ui/app/registration/views/newpatient.html
@@ -5,6 +5,22 @@
                 <legend class="registraion_legend first-registraion_legend">
                     <span class="mylegend"><strong>{{::'REGISTRATION_LABEL_NEW_PATIENT' | translate}}</strong></span>
                 </legend>
+                <section>
+                    <article class="form-field">
+                    <div class="field-attribute">
+                        <label class="control-lable" for="selectLocation">
+                            Registration Location
+                        </label>
+                    </div>
+                    <div class="field-value" id="currentLocations">
+                        <select id="selectLocation"
+                                required>
+                                <option value="">--Select Location--</option>
+                                <option ng-repeat="location in currentLocations.locations" ng-value="location.uuid">{{location.display}}</option>
+                        </select>
+                    </div>
+                </article>
+                </section>
                 <section class="clearfix">
                     <div class="photo-container-wrapper" ng-if="!disablePhotoCapture">
                         <span class="pull-right photo-container">
@@ -27,13 +43,6 @@
                             </select>
                         </div>
 
-                        <div class="field-value" id="currentLocations">
-                            <select id="selectLocation" 
-                                    required>
-                                    <option value="">--Select Location--</option>
-                                    <option ng-repeat="location in currentLocations.locations" ng-value="location.uuid">{{location.display}}</option>
-                            </select>
-                        </div>
 
                         <div class="field-value field-value-has-identifier">
                             <input type="text" id="registrationNumber" ng-model="patient.primaryIdentifier.registrationNumber"
