--- a/ui/app/registration/views/newpatient.html
+++ b/ui/app/registration/views/newpatient.html
@@ -13,11 +13,7 @@
                         </label>
                     </div>
                     <div class="field-value" id="currentLocations">
-                        <select id="selectLocation"
-                                ng-model="loggedInLocation.uuid"
-                                ng-options="location.uuid as location.display for location in currentLocations"
-                                required>
-                        </select>
+                     <input type="text" ng-model="patient['Registration Location']" disabled="true">
                     </div>
                 </article>
                 </section>
