--- a/ui/app/registration/views/editpatient.html
+++ b/ui/app/registration/views/editpatient.html
@@ -19,7 +19,7 @@
                     </label>
                 </div>
                 <div class="field-value" id="currentLocations">
-                 <input type="text" ng-model="patient['Registration Location']" disabled="true">
+                 <input type="text" ng-model="patient['registrationLocation']" disabled="true">
                 </div>
             </article>
             <article class="form-field">
