--- a/ui/app/registration/views/newpatient.html
+++ b/ui/app/registration/views/newpatient.html
@@ -13,7 +13,7 @@
                         </label>
                     </div>
                     <div class="field-value" id="currentLocations">
-                     <input type="text" ng-model="patient['Registration Location']" disabled="true">
+                     <input type="text" ng-model="patient['registrationLocation']" disabled="true">
                     </div>
                 </article>
                 </section>
