add help desk icon to registration tab

--- a/ui/app/registration/views/header.html
+++ b/ui/app/registration/views/header.html
@@ -9,6 +9,10 @@
         <div class="reg-header-right fr">
             <div ui-view="headerExtension" class="print-action-items fl"></div>
 
+            <button class="btn-user-info" id="help-icon-button">
+                <img src="../images/help_icon.png" id="help-icon"> 
+            </button>
+
             <button class="btn-user-info fr">
                 <i class="fa fa-user-md fa-white small"></i>
                 <i class="fa fa-caret-down fa-white mini"></i>
