--- a/ui/app/styles/registration/_registrationHeader.scss
+++ b/ui/app/styles/registration/_registrationHeader.scss
@@ -59,6 +59,12 @@
         }
       }
     }
+    #help-icon{
+      width:.9rem;
+    }
+    #help-icon-button{
+      margin-right: 1rem;
+    }
   }
   .split-button ul{
     &.hidden-options{
