add help icon to out patient section

--- a/ui/app/adt/views/headerAdt.html
+++ b/ui/app/adt/views/headerAdt.html
@@ -7,6 +7,10 @@
                 <i class="fa fa-stethoscope fa-white"></i>
             </a>
 
+            <button class="btn-user-info fr" id="help-icon-button">
+                <img src="../images/help_icon.png" id="help-icon"> 
+            </button>
+
         </header>
     </div>
 </div>
