add help icon to bedmanagement

--- a/ui/app/bedmanagement/views/header.html
+++ b/ui/app/bedmanagement/views/header.html
@@ -2,6 +2,9 @@
     <div class="opd-header-top">
         <header>
             <back-links-cache-buster></back-links-cache-buster>
+            <button class="btn-user-info fr" id="help-icon-button">
+                <img src="../images/help_icon.png" id="help-icon"> 
+            </button>
         </header>
     </div>
 </div>
