add change location restriction to users without change location privilege

--- a/ui/app/home/views/dashboard.html
+++ b/ui/app/home/views/dashboard.html
@@ -8,7 +8,7 @@
             </button>
             <form class="change-location fl">
                 <select  ng-model="selectedLocationUuid" ng-change="onLocationChange()">
-                    <option ng-repeat="location in locations | orderBy:'display'" ng-selected="isCurrentLocation(location)" value="{{location.uuid}}">
+                    <option ng-repeat="location in locations | orderBy:'display'" ng-selected="isCurrentLocation(location)" value="{{location.uuid}}" ng-disabled={{!hasChangeLocationPermission}}>
                         {{location.display | translate}}
                     </option>
                 </select>
